<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="5"
        android:layout_gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingRight="50dp"
            android:paddingEnd="50dp"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffffff"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="12sp"
                android:textStyle="bold"
                android:fontFamily="monospace"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLightGrey"
                android:textSize="12sp"
                android:padding="10dp"
                android:inputType="text"
                android:nextFocusUp="@id/username"
                android:nextFocusLeft="@id/username"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:fontFamily="monospace"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLightGrey"
                android:textSize="12sp"
                android:padding="10dp"
                android:inputType="textPassword"/>


            <TextView
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:gravity="center"/>


        </LinearLayout>


        <TextView
            android:id="@+id/forgot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:padding="10dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"/>


        <TextView
            android:id="@+id/signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:padding="10dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"/>



    </LinearLayout>

</ScrollView>